MIR-1311 compile with Java 21 (#1001)
* use mycore ruleset.xml
* pmd rule "fixes"
* java 21 migration